--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         definiebas at sea. Pro an verterem quaerendum.</p>
     <img id="aap1">
     <img id="aap2">
+    <br>
+    <a href="index2.html">opdracht 2</a>
 </div>
 <script src= "JavaScriptOp2.js"> </script>
 </body>
